--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,13 @@
          	<url-pattern>/insert</url-pattern>
          </servlet-mapping>
          
+         <servlet>
+         	<servlet-name>deleteStudent</servlet-name>
+         	<servlet-class>com.school.DeleteStudent</servlet-class>
+         </servlet>
+         <servlet-mapping>
+         	<servlet-name>deleteStudent</servlet-name>
+         	<url-pattern>/delete</url-pattern>
+         </servlet-mapping>
+         
 </web-app>
